# EAC-Net

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: README_ZH-CN.md  chinese.md  data_structure.md
eac/: entry.py
eac/configs/: predict.yaml  test.yaml  train.yaml
eac/configs/defaults/: data.yaml  loss.yaml  lr.yaml  record.yaml  run.yaml
eac/configs/hydra/: default.yaml
eac/configs/model/: eac.yaml  space.yaml  tracegrad.yaml
eac/data/: __init__.py  keys.py  physics.py
eac/data/dataset/: __init__.py  funcs.py  mixset.py
eac/data/load/: __init__.py  collate.py  loader.py  sample.py
eac/data/read/: __init__.py  base.py  chgcar_read.py  group.py  h5_read.py  vasp_read.py
eac/data/write/: __init__.py  write.py
eac/losses/: loss.py
eac/model/: __init__.py  base_model.py
eac/model/eacnet/: __init__.py  base.py  components.py  encode.py  heads.py  interactions.py
eac/model/tracegrad/: __init__.py  interactions.py
eac/run/: __init__.py  predict.py  record.py  run.py  test.py  train.py
eac/schedulers/: base.py  scheduler.py
eac/tools/: __init__.py  base.py  ema.py  loss.py  optim.py  scheduler.py
eac/utils/: __init__.py  arg_parse.py  arg_parser.py  dipole.py  envs.py  factory.py  version.py
examples/unicharge-mp/: input.yaml
examples/water/: POSCAR  input.yaml
examples/water/data/: 0.h5  1.h5  2.h5  3.h5  4.h5  5.h5  6.h5  7.h5  8.h5  9.h5
scripts/: compare_file.py  convert_dir.py  debug_probes.py  full_to_sample.py  oldh5_to_newh5.py  plot_sample.py
scripts/convert/: oldh5_to_newh5.py
