[project]
name = "eac"
version = "0.1.0"
description = "An open-source code for predicting atomic contributions charge density using Equivariant Message Passing Networks."
authors = [
    {name = "QinXuejian",email = "qinxuejian@nimte.ac.cn"},
    {name = "LvTaoyuze",email = "taoyuze.lv@ustc.edu.cn"},
    {name = "ZhongZhicheng",email = "zczhong@ustc.edu.cn"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
homepage = "https://github.com/qin2xue3jian4/RealGridE3Net"

[project.scripts]
eac = "eac.entry:main"

[tool.poetry]
packages = [
  { include = "eac" },
]
include = [
    { path = "eac/configs", format = "sdist" },
    { path = "eac/configs", format = "wheel" }
]

[tool.poetry.dependencies]
hydra-core = "*"
torch = "*"
numpy = "*"
e3nn = "*"
dpdata = "*"
ase = "*"
torch-geometric = "*"
pymatgen = "*"
torch_optimizer = "*"
torch_cluster = { version = "*", source = "pyg" }
torch_scatter = { version = "*", source = "pyg" }
matplotlib = "*"

[[tool.poetry.source]]
name = "pytorch121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "pyg"
url = "https://pytorch-geometric.com/whl/torch-2.5.1+cu121.html"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
